Adding google-java-format target to automatically format code